--- a/wikitest/images/report.html
+++ b/wikitest/images/report.html
@@ -1,9 +1,9 @@
 <html>
-<head><link rel="stylesheet" type="text/css" href="report.css">
+<head><link rel="stylesheet" type="text/css"href="report.css">
 <title>Image Captcha Report</title>
 </head>
 <body>
-<table>
+<h1>Image Comparison Result</h1><table>
 <tr>
 <td>Original</td>
 <td>Target</td>
@@ -459,3 +459,7 @@
 </table>
 </body>
 </html>
+<br><br><h1>Execution Report</h1><h3>Total Extraction Time = 8.18s
+<br>Total Number of Files = 14
+<br>Number of Comparison = 105
+<br>Average Comparison Time = 0.0779 sec / 1 file</h3>
